<resources>
    <string name="app_name">TwoTwo - L KOLEHIYO</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="PASSWORD">Password</string>
    <string name="LOGIN">Login</string>
    <string name="USERNAME">Username</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_ac_nibh_nec_eros_tempor_lacinia_eu_et_nibh_donec_eget_enim_tincidunt_blandit_turpis_sed_gravida_orci">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac nibh nec eros tempor lacinia eu et nibh. Donec eget enim tincidunt, blandit turpis sed, gravida orci.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="john_smith">John Smith</string>
    <string name="TODO">TODO</string>
    <string name="EDIT_PROFILE">Edit Profile</string>
    <string name="grade_10_section_a">Grade 10 - Section A</string>
    <string name="_123456">123456</string>
    <string name="TODO_">TODO</string>
    <string name="ICT">STEM</string>
    <string name="STUDENT_SCHEDULE">MY SCHEDULE</string>
    <string name="select_subject">Select subject:</string>
    <string name="TODOO">TODO</string>
    <string name="click_here_to_visit_the_website">Click here to visit the website</string>
    <string name="San_Vicente">San Vicente Liem de la Paz</string>
    <string name="facebook">Facebook</string>
    <string name="website">Website</string>
    <string name="youtube">Youtube</string>
    <string name="socials">SOCIALS</string>
    <string name="TODOOO">TODO</string>
    <string name="colegio_de_san_juan_de_letran_manaoag">Colegio de San Juan de Letran - Manaoag</string>
    <string name="www_letran_manaoag_edu_ph">www.letran-manaoag.edu.ph</string>
    <string name="letranmanaoag_1947">LetranManaoag 1947</string>
    <string name="grade_section">Grade 10, Section A</string>
    <string name="STRAND">Science and Technology</string>
    <string name="name">Username</string>
    <string name="LOGINN">Login</string>
    <string name="USERNAMEE">Username</string>
    <string name="PASSWORDD">Password</string>
</resources>