<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/name"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/gradeSectionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/grade_section"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/strandTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gradeSectionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/STRAND"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/idNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/strandTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="ID: 123456"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />

</RelativeLayout>
