<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity"
    android:background="@color/white">

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="250dp"
        android:text="@string/colegio_de_san_juan_de_letran_manaoag"
        tools:ignore="VisualLintButtonSize,TextSizeCheck" />

    <Button
        android:id="@+id/twitterButton"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facebookButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="23dp"
        android:text="@string/letranmanaoag_1947"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/instagramButton"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitterButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="23dp"
        android:text="@string/www_letran_manaoag_edu_ph"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/socials"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="0.5dp"
        android:text="@string/socials"
        android:textColor="@color/letran"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="167dp"
        android:layout_marginEnd="164dp"
        android:layout_marginTop="170dp"
        android:src="@drawable/facebook"
        tools:ignore="ContentDescription,HardcodedText" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="91dp"
        android:layout_height="73dp"
        android:layout_above="@+id/twitterButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="-90dp"
        android:src="@drawable/youtube"
        tools:ignore="ContentDescription,HardcodedText" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="93dp"
        android:layout_height="80dp"
        android:layout_above="@+id/instagramButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="-90dp"
        app:srcCompat="@drawable/web"
        tools:ignore="ContentDescription,HardcodedText" />
</RelativeLayout>
