<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/dsc_0981_edited_1"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        tools:ignore="MissingClass">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/drawable">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/USERNAMEE"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:autofillHints=""
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:drawablePadding="8dp"
                android:hint="@string/PASSWORDD"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#757575" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/LOGINN"
                android:id="@+id/loginButton"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/letran"
                app:cornerRadius = "20dp"
                tools:ignore="UnusedAttribute" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="300dp"
        android:layout_height="102dp"
        app:srcCompat="@drawable/maltese_cross"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />


</LinearLayout>